--- a/Review-vies/Views/Home/Index.cshtml
+++ b/Review-vies/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewData["Title"] = "ReviewVies";
+    
 }
+
 
 
 
@@ -8,3 +10,7 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+@foreach(var student in Model.Students)
+{
+    <h4>Hello @student!</h4>
+}
