--- a/Review-vies/Views/Movie/Index.cshtml
+++ b/Review-vies/Views/Movie/Index.cshtml
@@ -10,6 +10,16 @@
     <h4>MovieViewModel</h4>
     <hr />
     <h4>Movie Id is: @Model.Id</h4>
+    <h4>Movie Title is: @Model.Title</h4>
+    <h4>Movie Directors are: </h4>
+    @foreach (var director in Model.Directors)
+    {
+        <h5>@director</h5>
+    }
+    @foreach (var actor in Model.Actors)
+    {
+        <h5>@actor</h5>
+    }
 </div>
 <div>
 </div>
