Got api routes set except for post.

--- a/Review-vies/Views/Movie/Index.cshtml
+++ b/Review-vies/Views/Movie/Index.cshtml
@@ -11,15 +11,8 @@
     <hr />
     <h4>Movie Id is: @Model.Id</h4>
     <h4>Movie Title is: @Model.Title</h4>
-    <h4>Movie Directors are: </h4>
-    @foreach (var director in Model.Directors)
-    {
-        <h5>@director</h5>
-    }
-    @foreach (var actor in Model.Actors)
-    {
-        <h5>@actor</h5>
-    }
+    <h4>Movie Director: @Model.Director</h4>
+
 </div>
 <div>
 </div>
