--- a/Review-vies/Views/Movie/Index.cshtml
+++ b/Review-vies/Views/Movie/Index.cshtml
@@ -12,7 +12,10 @@
     <h4>Movie Id is: @Model.Id</h4>
     <h4>Movie Title is: @Model.Title</h4>
     <h4>Movie Director: @Model.Director</h4>
-
+    @if (!string.IsNullOrEmpty(Model.Poster))
+    {
+        <img src="@Model.Poster" />
+    }
 </div>
 <div>
 </div>
