--- a/Review-vies/Views/Submit/Submit page.html
+++ b/Review-vies/Views/Submit/Submit page.html
@@ -15,19 +15,19 @@
        <b>Movie :</b><input type="text" id="Movie"><br></br>
        <h1>Rating</h1>
 <b>Recommend!:</b><br>
-       <input name="product" value="5" type="checkbox" onclick="totalIt()"/>
+       <input name="product" value="5" type="radio" onclick="totalIt()"/>
        Excellent! 5 stars
        <br>
-       <input name="product" value="4" type="checkbox" onclick="totalIt()"/>
+       <input name="product" value="4" type="radio" onclick="totalIt()"/>
        Great! - 4 stars
        <br>
-       <input name="product" value="3" type="checkbox" onclick="totalIt()"/>
+       <input name="product" value="3" type="radio" onclick="totalIt()"/>
        Alright - 3 stars
        <br>
        <b>Not Recommended:</b><br>
-       <input name="product" value="2" type="checkbox" onclick="totalIt()"/>
+       <input name="product" value="2" type="radio" onclick="totalIt()"/>
        Pretty Bad 2 stars<br>
-       <input name="product" value="1" type="checkbox" onclick="totalIt()"/>
+       <input name="product" value="1" type="radio" onclick="totalIt()"/>
        Horrible 1 star<br>
       
 <input type="button" id="calculate" value="Submit" onclick="myFunction()"><br>   
