--- a/Review-vies/Views/Movie/Index.cshtml
+++ b/Review-vies/Views/Movie/Index.cshtml
@@ -1,21 +1,47 @@
 ﻿@model Review_vies.Models.MovieViewModel
 
 @{
-    ViewData["Title"] = "Movie";
+    ViewData["Title"] = Model.Title;
 }
 
-<h1>Movie</h1>
+<h1 class="text-center">@Model.Title</h1>
 
 <div>
-    <h4>MovieViewModel</h4>
     <hr />
-    <h4>Movie Id is: @Model.Id</h4>
-    <h4>Movie Title is: @Model.Title</h4>
-    <h4>Movie Director: @Model.Director</h4>
-    @if (!string.IsNullOrEmpty(Model.Poster))
-    {
-        <img src="@Model.Poster" />
-    }
+    <div class="row">
+        <div class="col-5 ml-3">
+            @if (!string.IsNullOrEmpty(Model.Poster))
+            {
+                <img src="@Model.Poster" style="width: 450px; height: 600px;" />
+            }
+        </div>
+        <div class="col-6">
+            <div class="row">
+                <h4>Title: @Model.Title</h4>
+            </div>
+            <div class="row">
+                <h4>Director: @Model.Director</h4>
+            </div>
+            <div class="row">
+                <h4>Year: @Model.Year</h4>
+            </div>
+            <div class="row">
+                <h4>Rating: @Model.Rating</h4>
+            </div>
+            <div class="row">
+                <h4>Quality: @Model.Scale/5</h4>
+            </div>
+            <div class="row">
+                <h4>Synopsis:</h4>
+            </div>            
+            <div class="row">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor 
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+        </div>
+    </div>
 </div>
 <div>
 </div>
