--- a/Review-vies/Views/Search/Index.cshtml
+++ b/Review-vies/Views/Search/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
     <div class="col-9 mt-3">
         <form id="searchForm">
-            <input type="text" name="SearchInput" id="SearchInputBox" />
+            <input type="text" name="searchterm" id="SearchInputBox" />
             <button type="submit" id="searchSubmit" value="submit">Submit</button>
         </form>
     </div>
